--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,11 +1,12 @@
 
 <div class = 'container'>
 
-    <h1> Projects </h1>
+    <h1> Projects. </h1>
 
     <div class = 'projects'>
 
         <div class = 'project'>
+
             <div class = 'description'>
                 <h2>iPhoneStudio.app</h2>
                 <p>
