--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -15,13 +15,45 @@
         transition: 0.4s;
         padding-top: 20px;
         top: 0;
-    
+        //opacity: 0.97;
+
         @keyframes navbar {
             0%   {margin-top: -@nav-height - 20px;}
             50%   {margin-top: -@nav-height - 20px;}
             100% {margin-top: 0px;}
         }
-    
+
+        #logo {
+            cursor: pointer;
+            user-select: none;
+            
+        }
+
+        #logo:hover {
+            transition: 0.3s;
+
+            #logo-circle {
+                // transition: 0.3s;
+                // transform-box: fill-box;
+                // transform-origin: center center;
+                // -webkit-transform: scale(1.1, 1.1);
+            }
+        }
+
+        #menuIcon {
+            display: none;
+            right: 0;
+            position: fixed;
+            margin-right: 25px;
+            margin-top: 17px;
+            cursor: pointer;
+        }
+
+        #mobileMenu {
+            position:fixed;
+            display: none;
+        }
+
         img {
             height: 50px;
             width: 50px;
@@ -42,7 +74,8 @@
                 margin: 0 7%;
                 line-height: @nav-height;
                 font-weight: 600;
-    
+                transition: 0.6s;
+
                 a {
                     color: var(--cream);
                     text-decoration: none;    
@@ -51,12 +84,13 @@
                 a:hover {
                     -webkit-transform: scale(1.5);
                     transition: 0.2s;
-                    color: var(--lightBlue)
+                    color: var(--yellow)
                 }
             }
         }
     }
 
+    // TABLET
     @media only screen and (max-width: 1100px) {
         #navbar {
 
@@ -64,19 +98,65 @@
 
                 .item {
                     margin: 0 5%;
-
+                    transition: 0.6s;
                 }
             }
         }
     }
 
+    // MOBILE
     @media only screen and (max-width: 750px) {
         #navbar {
+
+            #menuIcon {
+                display: inline-block;
+                right: 0;
+                position: fixed;
+                margin-right: 25px;
+                margin-top: 17px;
+                cursor: pointer;
+            }
+
+            .menu-bar {
+                width: 25px;
+                height: 3px;
+                background: var(--cream);
+                margin: 6px;
+                position: relative;
+                transition: 0.3s;
+                user-select: none;
+            }
+
+            #mobileMenu {
+                width: 100vw;
+                height: 92vh;
+                background-color: var(--mainBlue);
+                box-shadow: 0 5px 10px rgb(0 0 0 / 0.2);
+                display: block;
+                position: fixed;
+                text-align: center;
+                transition: 0.5s;
+                top: -92vh;
+                z-index: -100;
+                margin-top: -13px;
+
+                .item {
+                    display: block;
+                    font-size: 25px;
+                    font-weight: 600;
+                    margin-top: 100px;
+
+                    a {
+                        color: var(--cream);
+                        text-decoration: none;    
+                    }
+                }
+            }
 
             .item-container {
 
                 .item {
-
+                    display: none;
                 }
             }
         }
