--- a/src/app/components/projects/projects.component.less
+++ b/src/app/components/projects/projects.component.less
@@ -1,27 +1,34 @@
 
 .container {
     width: 100vw;
-    background-color: var(--cream);
+    background-color: var(--mainBlue);
 
     h1 {
-        padding-left: 10vw;
+        padding-left: 7vw;
         padding-top: 10vh;
         margin: 0;
-        color: var(--mainBlue);
+        color: var(--yellow);
         font-family: 'Georama', sans-serif;
+        font-size: 100px;
+        margin-bottom: -30px;
+        transition: 0.5s;
     }
  
     .projects {
         padding-bottom: 10vh;
+        background-color: var(--lightBlue);
+        width: 90vw;
+        margin-left: 5vw;
+        border-radius: 20px;
 
         .project {
             display: flex;
             margin-left: 5vw;
 
             h2 {
-                margin-top: 5vh;
+                margin-top: 10vh;
                 margin-left: 5vw;
-                color: var(--mainBlue);
+                color: var(--cream);
                 font-family: 'Georama', sans-serif;
             }
             
@@ -31,7 +38,7 @@
                 p {
                     margin-left: 5vw;
                     margin-right: 5vw;
-                    color: var(--mainBlue);
+                    color: var(--cream);
                     font-family: Arial, Helvetica, sans-serif;
                     line-height: 30px;
                 }
@@ -47,7 +54,8 @@
                     margin:auto;
                     transform: rotate(4deg);   
                     transition: 0.5s;     
-                    z-index: 0;    
+                    z-index: 0;
+                    margin-top: 40px;    
                 }
     
                 img:hover {
@@ -60,6 +68,11 @@
 
     // TABLET
     @media only screen and (max-width: 1100px) {
+
+        h1 {
+            font-size: 80px;
+        }
+        
         .projects {
             padding-bottom: 10vh;
     
@@ -67,8 +80,19 @@
                 display: block;
 
                 h2 {
-                    margin-left: 5vw;
-                    margin-right: 5vw;
+                    margin-top: 0vh;
+                    padding-top: 8vh;
+                    margin-left: 0vw;
+                }
+
+                .description {
+                    p {
+                        margin-left: 0vw;
+                        margin-right: 10vw;
+                        color: var(--cream);
+                        font-family: Arial, Helvetica, sans-serif;
+                        line-height: 30px;
+                    }
                 }
 
                 .description {
@@ -98,9 +122,33 @@
 
     // MOBILE
     @media only screen and (max-width: 750px) {
+
+        h1 {
+            font-size: 60px;
+            margin-bottom: -20px;
+    
+        }
+
+
         .projects {
     
             .project {
+
+                h2 {
+                    margin-top: 0vh;
+                    padding-top: 8vh;
+                    margin-left: 0vw;
+                }
+
+                .description {
+                    p {
+                        margin-left: 0vw;
+                        margin-right: 10vw;
+                        color: var(--cream);
+                        font-family: Arial, Helvetica, sans-serif;
+                        line-height: 30px;
+                    }
+                }
 
                 .image {
                     width: 90vw;
