--- a/src/app/components/work-experience/work-experience.component.less
+++ b/src/app/components/work-experience/work-experience.component.less
@@ -2,7 +2,7 @@
 .container {
     height: 100vh;
     width: 100vw;
-    background-color: var(--lightBlue);
+    background-color: white;
 
     h1 {
         padding-left: 5vw;
