redesigned the entire UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <app-navbar></app-navbar>
 <app-introduction></app-introduction>
-<app-projects></app-projects>
+<app-about-me></app-about-me>
 <app-work-experience></app-work-experience>
+<app-projects></app-projects>
