--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -7,7 +7,7 @@
         position: fixed;
         width: 100vw;
         height: @nav-height;
-        background-color: var(--mainBlue);
+        background-color: var(--lightYellow);
         font-family: 'Georama', sans-serif;
         animation-name: navbar;
         animation-duration: 2s;
@@ -70,21 +70,20 @@
             position: fixed;
             
             .item {
-                font-size: 18px;
+                font-size: 17px;
                 margin: 0 7%;
                 line-height: @nav-height;
                 font-weight: 600;
                 transition: 0.6s;
 
                 a {
-                    color: var(--cream);
+                    color: var(--Navy);
                     text-decoration: none;    
                 }
     
                 a:hover {
-                    -webkit-transform: scale(1.5);
                     transition: 0.2s;
-                    color: var(--yellow)
+                    color: var(--gray);
                 }
             }
         }
@@ -120,7 +119,7 @@
             .menu-bar {
                 width: 25px;
                 height: 3px;
-                background: var(--cream);
+                background: var(--Navy);
                 margin: 6px;
                 position: relative;
                 transition: 0.3s;
@@ -130,7 +129,7 @@
             #mobileMenu {
                 width: 100vw;
                 height: 92vh;
-                background-color: var(--mainBlue);
+                background-color: var(--lightYellow);
                 box-shadow: 0 5px 10px rgb(0 0 0 / 0.2);
                 display: block;
                 position: fixed;
@@ -147,7 +146,7 @@
                     margin-top: 100px;
 
                     a {
-                        color: var(--cream);
+                        color: var(--Navy);
                         text-decoration: none;    
                     }
                 }
