--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,12 +1,8 @@
-
-<div class = 'container'>
-
+<div class = 'container' id = 'projects'>
     <h1> Projects. </h1>
 
     <div class = 'projects'>
-
         <div class = 'project'>
-
             <div class = 'description'>
                 <h2>iPhoneStudio.app</h2>
                 <p>
@@ -19,7 +15,5 @@
                 <img src = 'assets/iphonestudio.png'/>
             </div>
         </div>
-
-
     </div>
 </div>
