--- a/src/app/components/about-me/about-me.component.less
+++ b/src/app/components/about-me/about-me.component.less
@@ -5,7 +5,7 @@
     padding-bottom: 10vh;
 
     h1 {
-        padding-left: 12vw;
+        padding-left: 17vw;
         padding-top: 10vh;
         margin: 0;
         color: var(--lightNavy);
@@ -15,46 +15,45 @@
         transition: 0.5s;
     }
 
-    .projects:hover {
+    .about-me-container:hover {
         transition: 0.5s;
     }
  
-    .projects {
-        padding-bottom: 5vh;
-        background-color: var(--lightBlue);
+    .about-me-container {
+        padding-bottom: 10vh;
+        background-color: var(--lightGreen);
         width: 70vw;
-        margin-left: 10vw;
+        margin-left: 15vw;
         border-radius: 20px;
         transition: 0.5s;
         box-shadow: 0 5px 20px rgb(0 0 0 / 0.2);
 
-        .project {
+
+        .about-me {
             display: flex;
             margin-left: 5vw;
-
-            h2 {
-                margin-top: 10vh;
-                margin-left: 0vw;
-                color: var(--Navy);
-                font-family: 'Georama', sans-serif;
-            }
             
             .description {
-                width: 65vw;
+                width: 70vw;
+                text-align:justify;
 
                 p {
+                    margin-top: 0vh;
+                    padding-top: 10vh;
+                    padding-bottom: 1vh;
                     margin-left: 0vw;
                     margin-right: 5vw;
                     color: var(--Navy);
                     font-family: Arial, Helvetica, sans-serif;
                     line-height: 30px;
                     font-size: 17px;
+                    transition: 0.5s;
                 }
             }
     
             .image {
                 width: 25vw;
-                margin-right: -10vw;
+                margin-right: 10vw;
     
                 img {
                     height: 550px;
@@ -63,7 +62,8 @@
                     transform: rotate(4deg);   
                     transition: 0.5s;     
                     z-index: 0;
-                    margin-top: 55px;    
+                    margin-top: 40px;    
+                    opacity: 0.8;
                 }
     
                 img:hover {
@@ -77,34 +77,34 @@
     // TABLET
     @media only screen and (max-width: 1100px) {
 
-        padding-bottom: 10vh;
+        padding-bottom: 0vh;
 
         h1 {
             font-size: 80px;
             padding-left: 7vw;
         }
         
-        .projects {
+        .about-me-container {
             padding-bottom: 10vh;
             width: 90vw;
             margin-left: 5vw;
     
-            .project {
+            .about-me {
                 display: block;
 
                 h2 {
                     margin-top: 0vh;
                     padding-top: 8vh;
-                    margin-left: 0vw;
                 }
 
                 .description {
-                    p {
+                    p {    
                         margin-left: 0vw;
                         margin-right: 10vw;
                         color: var(--Navy);
                         font-family: Arial, Helvetica, sans-serif;
                         line-height: 30px;
+                        transition: 0.5s;
                     }
                 }
 
@@ -142,22 +142,29 @@
             margin-bottom: -20px;
         }
 
-        .projects {
+        .about-me-container {
+            padding-bottom: 2vh;
+            width: 90vw;
     
-            .project {
+            .about-me {
 
                 h2 {
-                    padding-top: 5vh;
+                    margin-top: 0vh;
+                    padding-top: 8vh;
                     margin-left: 0vw;
                 }
 
                 .description {
                     p {
+                        padding-top: 5vh;
+                        padding-bottom: 0vh;
                         margin-left: 0vw;
                         margin-right: 10vw;
                         color: var(--Navy);
                         font-family: Arial, Helvetica, sans-serif;
                         line-height: 30px;
+                        transition: 0.5s;
+                        text-align: left;
                     }
                 }
 
