--- a/src/app/components/introduction/introduction.component.html
+++ b/src/app/components/introduction/introduction.component.html
@@ -1,15 +1,18 @@
-<div class = 'container'>
+<div class = 'container' id = 'introduction'>
 
     <div class = 'introduction'>
-        <!-- <h1>LUKE HEARY</h1>
-        <h2>FULL STACK SOFTWARE ENGINEER</h2> -->
+
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 403.44 74.33">
+            <path class="squiggle" fill="none" stroke="#bc85ff" stroke-miterlimit="10" stroke-width="25" d="M14.2 65.54s36-36.79 56.31-35.66 38.6 27.31 58.13 26.56 26.34-5.91 37.6-13 30.53-19.52 39.48-19.14 19.48 8.23 31.12 19.87 18.91 13.2 25.25 13.16S278.24 58 297 40.76s25.86-17.86 31.49-17.86 48.11 15.42 65 13.27" />
+        </svg> -->
+
 
         <h1>Luke Heary</h1>
         <h2>Full Stack Software Engineer</h2>
 
-
-
+        <!-- <svg height="50" width="44" viewBox="-10 0 75 10">
+            <path d="M0,0 l20,25 l20,-25" fill="none" stroke="black" stroke-linecap="round" stroke-width="12" />
+        </svg> -->
+        
     </div>
-
-
 </div>
