--- a/src/app/components/introduction/introduction.component.less
+++ b/src/app/components/introduction/introduction.component.less
@@ -7,13 +7,31 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background-color: var(--mainBlue);
+        background-color: var(--lightYellow);
+
+        .squiggle {
+            stroke-dasharray: 450;
+            stroke-dashoffset: 450;
+            animation: draw 1s linear forwards;
+          }
+          
+          @keyframes draw {
+            to {
+              stroke-dashoffset: 0;
+            }
+          }
+
+        svg {
+            margin: 0;
+            background-color: red;
+        }
     
         h1 {
             animation-name: h1animation;
             animation-duration: 2s;
+            margin-top: -15px;
             font-family: 'Georama', sans-serif;
-            color: var(--cream);
+            color: var(--Navy);
             font-size: 100px;
             padding-left: 20vw;
             transition: 0.2s;
@@ -30,7 +48,7 @@
             animation-duration: 1s;
             margin-top: -80px;
             font-family: 'Georama', sans-serif;
-            color: var(--cream);
+            color: var(--Navy);
             font-size: 30px;
             padding-left: 20vw;
             letter-spacing: 1px;
@@ -42,7 +60,6 @@
                 100% {opacity: 1;}
             }
         }
-    
     
         p {
             margin: 0;
@@ -57,6 +74,9 @@
 
      // TABLET
     @media only screen and (max-width: 1100px) {
+
+        padding-bottom: 0vh;
+
         .introduction {
             h1 {
                 padding-left: 15vw;
@@ -78,14 +98,14 @@
     @media only screen and (max-width: 750px) {
         .introduction {
             h1 {
-                font-size: 11vw;
+                font-size: 20vw;
                 padding-left: 10vw;
                 transition: 0.2s;
             }
         
             h2 {
                 font-size: 5vw;
-                margin-top: -7%;
+                margin-top: -10%;
                 padding-left: 10vw;
                 letter-spacing: 1px;
                 transition: 0.2s;
