--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,8 +4,8 @@
     <div id = "navbar">
 
         <svg id = 'logo' height="65" width="80" (click) = 'scrollToTopOfPage()'>
-            <circle id = 'logo-circle' cx="50" cy="33" r="20" stroke="var(--cream)" stroke-width="3" fill="none" />
-            <text x="39.5" y="40" fill="var(--cream)" font-size="19" letter-spacing="-2.5">LH</text>
+            <circle id = 'logo-circle' cx="50" cy="33" r="20" stroke="var(--Navy)" stroke-width="3" fill="none" />
+            <text x="39.5" y="40" fill="var(--Navy)" font-size="19" letter-spacing="-2.5">LH</text>
         </svg>
 
         <div id = 'menuIcon' (click) = 'openMobileNavbarMenu()'>
@@ -15,19 +15,17 @@
         </div>
 
         <div id = 'mobileMenu'>
-            <div class = 'item'> <a href = ""> Resumé </a> </div>
-            <div class = 'item'> <a href = ""> LinkedIn </a> </div>
-            <div class = 'item'> <a href = ""> Github </a> </div>
-            <div class = 'item'> <a href = ""> Email </a> </div>
+            <div class = 'item' (click) = 'closeMenu()'> <a href = "#about-me"> About Me </a> </div>
+            <div class = 'item' (click) = 'closeMenu()'> <a href = "#work"> Work </a> </div>
+            <div class = 'item' (click) = 'closeMenu()'> <a href = "#projects"> Projects </a> </div>
+            <div class = 'item' (click) = 'closeMenu()'> <a href = "#contact"> Contact </a> </div>
         </div>
         
         <div class = 'item-container'>
-            <div class = 'item'> <a href = ""> Resumé </a> </div>
-            <div class = 'item'> <a href = ""> LinkedIn </a> </div>
-            <div class = 'item'> <a href = ""> Github </a> </div>
-            <div class = 'item'> <a href = ""> Email </a> </div>
+            <div class = 'item'> <a href = "#about-me"> About Me </a> </div>
+            <div class = 'item'> <a href = "#work"> Work </a> </div>
+            <div class = 'item'> <a href = "#projects"> Projects </a> </div>
+            <div class = 'item'> <a href = "#contact"> Contact </a> </div>
         </div>
-
     </div>
-
 </div>
