added an announcment banner, new fonts and new navbar

--- a/src/app/components/introduction/introduction.component.html
+++ b/src/app/components/introduction/introduction.component.html
@@ -1,3 +1,4 @@
+    
 <div class = 'container' id = 'introduction'>
 
     <div class = 'introduction'>
@@ -10,9 +11,17 @@
         <h1>Luke Heary</h1>
         <h2>Full Stack Software Engineer</h2>
 
-        <!-- <svg height="50" width="44" viewBox="-10 0 75 10">
-            <path d="M0,0 l20,25 l20,-25" fill="none" stroke="black" stroke-linecap="round" stroke-width="12" />
-        </svg> -->
+        <div class = 'socials'>
+
+            <i title='LinkedIn' class='bx bxl-linkedin-square bx-md'></i>
+            <i title='GitHub' class='bx bxl-github bx-md'></i>
+            <i title='Email' class='bx bxs-envelope bx-md'></i>
+            <i title='Resumé' class='bx bxs-file-blank bx-md'></i>
+
+            <svg height="70" width="30">
+                <line x1="17" y1="17" x2="17" y2="100" style="stroke:black; stroke-width:3" />
+            </svg>    
+        </div>
         
     </div>
 </div>
