--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
 
         <svg id = 'logo' height="65" width="80" (click) = 'scrollToTopOfPage()'>
             <circle id = 'logo-circle' cx="50" cy="33" r="20" stroke="var(--Navy)" stroke-width="3" fill="none" />
-            <text x="39.5" y="40" fill="var(--Navy)" font-size="19" letter-spacing="-2.5">LH</text>
+            <text id = 'initials' x="39.5" y="40" fill="var(--Navy)" font-size="19" letter-spacing="-2.5">LH</text>
         </svg>
 
         <div id = 'menuIcon' (click) = 'openMobileNavbarMenu()'>
