--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -11,6 +11,9 @@
                     I started working on iPhoneStudio.app the day before preorders started, and had a rough working version ready for preorder day. I spent the following few days updating, tweaking, and perfecting the user interface and user experience, and then later in the week a reddit post featuring my iPhoneStudio.app went semi-viral, and a tech blog from the Czech Republic wrote an article featuring my site as well. Within two weeks the website had over 13,000 visits, and I’m really happy that I was able to help so many people pick out their new phone accessories.            
                 </p>    
             </div>
+            <!-- <div class = 'project-button'>
+                <a href = ''>Go to project</a>
+            </div> -->
             <div class = 'image'>
                 <img src = 'assets/iphonestudio.png'/>
             </div>
