--- a/src/app/components/work-experience/work-experience.component.html
+++ b/src/app/components/work-experience/work-experience.component.html
@@ -1,50 +1,38 @@
 <div class = 'container' id = 'work'>
-    <h1> Where I've Worked. </h1>
+    <h1> Work. </h1>
 
     <div class = 'work-experience-container'>
         <div class = 'job'>
             <div class = 'description'>
                 <h2>John Hancock Financial</h2>
-                <h3>February 2020 - Present</h3>
-                <p>
-                    <li>Hi there! My name is Luke and I live in Boston, Massachusetts. I’ve had a passion for technology for as long as I can remember, which led me to majoring in Computer Science in college.</li>
-                    <li>In college I completed three internships at three amazing different companies, and I’m currently</li>
-                    <li>working full-time at John Hancock Financial as a full stack engineer.</li>
-                </p>    
+                <!-- <h3>February 2020 - Present</h3> -->
+                <p> Hi there! My name is Luke and I live in Boston, Massachusetts. I’ve had a passion for technology for as long as I can remember, which led me to majoring in Computer Science in college.</p>    
             </div>
         </div>
 
         <div class = 'job'>
             <div class = 'description'>
                 <h2>IBM</h2>
-                <h3>May 2019 - December 2019</h3>
-                <p>
-                    <li>Hi there! My name is Luke and I live in Boston, Massachusetts. I’ve had a passion for technology for as long as I can remember, which led me to majoring in Computer Science in college.</li>
-                    <li>In college I completed three internships at three amazing different companies, and I’m currently</li>
-                    <li>working full-time at John Hancock Financial as a full stack engineer.</li>
-                </p>    
+                <!-- <h3>May 2019 - December 2019</h3> -->
+                <p> Hi there! My name is Luke and I live in Boston, Massachusetts. I’ve had a passion for technology for as long as I can remember, which led me to majoring in Computer Science in college.</p>    
+ 
             </div>
         </div>
 
         <div class = 'job'>
             <div class = 'description'>
                 <h2>Trove - Predictive Data Science</h2>
-                <h3>January 2018 - August 2018</h3>
-                <p>
-                    <li>Hi there! My name is Luke and I live in Boston, Massachusetts. I’ve had a passion for technology for as long as I can remember, which led me to majoring in Computer Science in college.</li>
-                    <li>working full-time at John Hancock Financial as a full stack engineer.</li>
-                </p>    
+                <!-- <h3>January 2018 - August 2018</h3> -->
+                <p> Hi there! My name is Luke and I live in Boston, Massachusetts. I’ve had a passion for technology for as long as I can remember, which led me to majoring in Computer Science in college.</p>    
+
             </div>
         </div>
 
         <div class = 'job'>
             <div class = 'description'>
                 <h2>Publicis Media</h2>
-                <h3>May 2017 - August 2017</h3>
-                <p>
-                    <li>Hi there! My name is Luke and I live in Boston, Massachusetts. I’ve had a passion for technology for as long as I can remember, which led me to majoring in Computer Science in college.</li>
-                    <li>In college I completed three internships at three amazing different companies, and I’m currently</li>
-                </p>    
+                <!-- <h3>May 2017 - August 2017</h3> -->
+                <p> Hi there! My name is Luke and I live in Boston, Massachusetts. I’ve had a passion for technology for as long as I can remember, which led me to majoring in Computer Science in college.</p>    
             </div>
         </div>
     </div>
