--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
 <app-about-me></app-about-me>
 <app-work-experience></app-work-experience>
 <app-projects></app-projects>
+<app-contact></app-contact>
