--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,9 +1,8 @@
-<div class = 'container' id = 'about-me'>
-    <h1> About Me. </h1>
+<div class = 'container' id = 'contact'>
+    <h1> Contact. </h1>
 
-    <div class = 'about-me-upper-triangle'></div>
-    <div class = 'about-me-container'>
-        <div class = 'about-me'>
+    <div class = 'contact-container'>
+        <div class = 'contact'>
             <div class = 'description'>
                 <p>
                     Hi there! My name is Luke and I live in Boston, Massachusetts. I’ve had a passion for technology for as long as I can remember, which led me to majoring in Computer Science in college. In college I completed three internships at three amazing different companies, and I’m currently working full-time at John Hancock Financial as a full stack engineer. <br><br>
