--- a/src/app/components/contact/contact.component.less
+++ b/src/app/components/contact/contact.component.less
@@ -15,40 +15,62 @@
         transition: 0.5s;
     }
 
-    .about-me-container:hover {
+    .contact-container:hover {
         transition: 0.5s;
     }
-
-    .about-me-container {
+ 
+    .contact-container {
         padding-bottom: 10vh;
-        background-color: var(--lightGreen);
-        transition: 0.5s;
+        background-color: var(--lightOrange);
         width: 88vw;
         margin-left: 6vw;
         border-radius: 20px;
+        transition: 0.5s;
         box-shadow: 0 1px 1px rgba(0,0,0,0.15), 
         0 2px 2px rgba(0,0,0,0.15), 
         0 4px 4px rgba(0,0,0,0.15), 
         0 8px 8px rgba(0,0,0,0.15);
 
-        .about-me {
+        .contact {
             display: flex;
-            
+            margin-left: 5vw;
+
             .description {
-                width: 100vw;
+                width: 70vw;
                 text-align:justify;
 
-                p {   
+                p {
                     margin-top: 0vh;
-                    padding-top: 20vh;
-                    padding-bottom: 10vh;
-                    margin-left: 16vw;
-                    margin-right: 16vw;
+                    padding-top: 10vh;
+                    padding-bottom: 1vh;
+                    margin-left: 0vw;
+                    margin-right: 5vw;
                     color: var(--Navy);
-                    font-family: Inter,Source Sans Pro,Helvetica Neue,Arial,sans-serif;
+                    font-family: Arial, Helvetica, sans-serif;
                     line-height: 30px;
                     font-size: 17px;
                     transition: 0.5s;
+                }
+            }
+    
+            .image {
+                width: 25vw;
+                margin-right: 10vw;
+    
+                img {
+                    height: 550px;
+                    display: block;
+                    margin: auto;
+                    transform: rotate(4deg);   
+                    transition: 0.5s;     
+                    z-index: 0;
+                    margin-top: 40px;    
+                    opacity: 0.8;
+                }
+    
+                img:hover {
+                    transform: rotate(-4deg);     
+                    transition: 0.5s;       
                 }
             }
         }
@@ -64,12 +86,12 @@
             padding-left: 7vw;
         }
         
-        .about-me-container {
+        .contact-container {
             padding-bottom: 3vh;
             width: 90vw;
             margin-left: 5vw;
     
-            .about-me {
+            .contact {
                 display: block;
 
                 h2 {
@@ -124,11 +146,11 @@
             margin-bottom: -20px;
         }
 
-        .about-me-container {
+        .contact-container {
             padding-bottom: 2vh;
             width: 90vw;
     
-            .about-me {
+            .contact {
 
                 h2 {
                     margin-top: 0vh;
