--- a/src/app/components/introduction/introduction.component.less
+++ b/src/app/components/introduction/introduction.component.less
@@ -1,5 +1,8 @@
 
 .container {
+    overflow:hidden;
+    position: relative;
+
     .introduction {
         height: 95vh;
         width: 100vw;
@@ -9,23 +12,50 @@
         justify-content: center;
         background-color: var(--lightYellow);
 
-        .squiggle {
-            stroke-dasharray: 450;
-            stroke-dashoffset: 450;
-            animation: draw 1s linear forwards;
-          }
+        // .squiggle {
+        //     stroke-dasharray: 450;
+        //     stroke-dashoffset: 450;
+        //     animation: draw 1s linear forwards;
+        //   }
           
-          @keyframes draw {
-            to {
-              stroke-dashoffset: 0;
-            }
-          }
+        //   @keyframes draw {
+        //     to {
+        //       stroke-dashoffset: 0;
+        //     }
+        //   }
 
-        svg {
-            margin: 0;
-            background-color: red;
-        }
+        .socials {
+            right: 0;
+            bottom: 0;
+            position: absolute;
+            // margin-top: 42vh;
+            margin-right: 1.5vw;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+            position: fixed;
+            animation-name: line;
+            animation-duration: 2s;
+            margin-bottom: 0px;
+
+            i {
+                margin-top: 5px;
+            }
+
+            i:hover {
+                transition: 0.2s;
+                color: var(--brightBlue);
+                cursor: pointer;
+            }
     
+            @keyframes line {
+                0%   {margin-bottom: -350px;}
+                55%   {margin-bottom: -350px;}
+                100% {margin-bottom: 0px;}
+            }
+        }
+
+
         h1 {
             animation-name: h1animation;
             animation-duration: 2s;
