--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -9,13 +9,12 @@
         height: @nav-height;
         background-color: var(--lightYellow);
         font-family: 'Georama', sans-serif;
-        animation-name: navbar;
-        animation-duration: 2s;
         z-index: 100;           
         transition: 0.4s;
         padding-top: 20px;
         top: 0;
-        //opacity: 0.97;
+        animation-name: navbar;
+        animation-duration: 2s;
 
         @keyframes navbar {
             0%   {margin-top: -@nav-height - 20px;}
@@ -26,17 +25,26 @@
         #logo {
             cursor: pointer;
             user-select: none;
-            
+            transition: 0.2s;
         }
 
         #logo:hover {
-            transition: 0.3s;
+            transition: 0.2s;
 
             #logo-circle {
+                stroke: var(--brightBlue);
+                transition: 0.2s;
                 // transition: 0.3s;
                 // transform-box: fill-box;
                 // transform-origin: center center;
                 // -webkit-transform: scale(1.1, 1.1);
+            }
+
+            #initials {
+                fill: #007BD8;
+                stroke: #007BD8;
+                transition: 0.2s;
+
             }
         }
 
@@ -78,12 +86,13 @@
 
                 a {
                     color: var(--Navy);
-                    text-decoration: none;    
+                    text-decoration: none;   
+                    transition: 0.2s; 
                 }
     
                 a:hover {
                     transition: 0.2s;
-                    color: var(--gray);
+                    color: var(--brightBlue);
                 }
             }
         }
